# bigcontext

./: .eslintrc.json  .gitignore  .repomixignore  .vscodeignore  CODEBUDDY.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  VS_Code_Extension_TDD_Setup_Complete__2025-09-09T20-54-14.md  best-ui.md  debug_ast_parsing.js  docker-compose.yml  package-lock.json  package.json  repomix-md.md  repomix-output.md  repomix-output.xml  test_end_to_end_workflow.js  test_indexing_worker.js  test_python_file.py  tsconfig.json  vitest.config.ts
docs/: CONTRIBUTING.md  USER_GUIDE.md  ast-parser-fixes.md  comprehensive-improvements-summary.md  cpmguide.md  diagnosis-styling.md  final-integration-checklist.md  implementation-guide.md  instruct.md  logging-implementation-summary.md  qdrant-robustness-improvements.md  sprint-15-16-completion-summary.md  sprint3-usage.md  sprint4-usage.md  ui-spacing-guidelines.md  webview-configuration-improvements.md  webview-guide.md  webview-remote-ssh-analysis.md
memory/: constitution.md
scripts/: build-sidecar-linux.sh  build-sidecar-macos.sh  build-sidecar-windows.ps1  release.js  test-connection-fixes.js  test-logging.js  test-no-workspace-workflow.js  test-parallel-indexing.js  test-setup-guidance.js  test-telemetry-accessibility.js  test-worker-functionality.js  test-workspace-fix.js  update-agent-context.sh  verify-all-sprints.js  verify-implementation.js  verify-no-workspace.js  verify-sprint1.js  verify-sprint2.js  verify-sprint3.js  verify-sprint4.js
shared/: connectionMonitor.js  connectionMonitor.js.map
sidecar/: README.md  main.py  port_discovery.py  pyinstaller.spec  pyproject.toml
sidecar/tests/: __init__.py  test_main.py  test_port_discovery.py
src/: commandManager.ts  configService.ts  (+12 more)
(+587 files in other folders)
